--- a/PI/PI.vcxproj
+++ b/PI/PI.vcxproj
@@ -130,6 +130,9 @@
   <ItemGroup>
     <ClCompile Include="pi_integral.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\x64\Release\test_pi.py" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
