--- a/PI/PI.vcxproj.filters
+++ b/PI/PI.vcxproj.filters
@@ -19,4 +19,7 @@
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\x64\Release\test_pi.py" />
+  </ItemGroup>
 </Project>
